jaml/examples/invalid/brace_list_nl.jaml
# Brace lists with newlines are allowed in YAML, but not JAML.
brace_list_nl: [
  1,
  2,
  3
]
